--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
   <body>
     <div id="container"></div>
-    <>
+    <div id="container-1"></div>
+    <div id="container-2"></div>
+
     <script src="./vendor/react.js"></script>
     <script src="./vendor/react-dom.js"></script>
     <script src="./vendor/babel-browser.min.js"></script>
