--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Scoreboard</title>
+    <title>Ksenia Beliaeva</title>
     <link rel="stylesheet" href="./app.css" />
   </head>
 
