Added CDN links

--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="utf-8">
     <title>Ksenia Beliaeva</title>
     <link rel="stylesheet" href="./app.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
   </head>
 
   <body>
-    <div id="container"></div>
-    <div id="container-1"></div>
-    <div id="container-2"></div>
+    <div id="container1"></div>
+    <div id="container2"></div>
+    <div id="container3"></div>
 
-    <script src="./vendor/react.js"></script>
-    <script src="./vendor/react-dom.js"></script>
-    <script src="./vendor/babel-browser.min.js"></script>
-    <script type="text/babel" src="./app.jsx"></script>
+<!-- CDNs
+========= -->
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.24.0/babel.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js"></script>
+
+  <script type="text/babel" src="./app.jsx"></script>
   </body>
 </html>
