--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Ksenia Beliaeva</title>
+    <meta charset="UTF-8">
+    <title>Ksenia Beliaeva portfolio</title>
     <link rel="stylesheet" href="./app.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
+    <link rel="stylesheet" href="normalize.css">
+
 
   </head>
 
   <body>
-    <div id="container1"></div>
-    <div id="container2"></div>
-    <div id="container3"></div>
+    <div id="main-container"></div>
+
 
 <!-- CDNs
-========= -->
+     ==== -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.24.0/babel.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js"></script>
+    <script src="https://unpkg.com/react@latest/dist/react.js"></script>
+    <script src="https://unpkg.com/react-dom@latest/dist/react-dom.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 
-  <script type="text/babel" src="./app.jsx"></script>
+<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/jquery.typeit/4.4.0/typeit.min.js"></script><!--/typeit-->
+
+
+<script type="text/babel" src="./app.jsx"></script>
+<script type="text/babel" src="./portfolio.jsx"></script>
+
+
   </body>
 </html>
